--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,50 @@ html {
   -moz-box-sizing: inherit;
 	box-sizing: inherit; 
 }
+
+body {
+	margin: 0;
+}
+
+ul {
+	list-style: none;
+}
+
+/* mobile menu presentation */
+
+
+#mobile-menu i {
+	padding-top:.5em;
+	padding-left: 1em;
+	vertical-align: bottom;
+	font-size: 1.5em;
+}
+
+
+/* hide trips submenu by default */
+#mobile-menu ul.trip-menu {
+	display: none;
+}
+
+#mobile-menu {
+	outline: 1px solid red;
+	position: fixed;
+	background-color: #fff;
+	width: 100%;
+	top: 0;
+	height: 3em;
+}
+
+#mobile-menu > ul {
+	outline: 1px solid green;
+	background-color: #fff;
+	width: 60%;
+	padding-top: .5em;
+	margin-top: .8em;
+	height: 100vh;
+}
+
+
+
+
+
