--- a/css/main.css
+++ b/css/main.css
@@ -33,12 +33,13 @@ h1 {
 
 /* mobile menu presentation */
 
-#menu {
+#menu > div {
 	margin: 0;
 	-webkit-box-shadow: 0px 3px 4px 0px rgba(204,204,204,1);
 	-moz-box-shadow: 0px 3px 4px 0px rgba(204,204,204,1);
 	box-shadow: 0px 3px 4px 0px rgba(204,204,204,1);
 	position: fixed;
+	z-index: 2;
 	background-color: #fff;
 	width: 100%;
 	top: 0;
@@ -74,6 +75,9 @@ li > .fa-chevron-down {
 }
 
 #menu > ul {
+	position:fixed;
+	z-index: 1;
+	top: 3em;
 	background-color: #fff;
 	width: 50%;
 	padding-top: 1.5em;
