--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,9 @@ li > .fa-chevron-down {
 }
 
 #menu > ul {
+	-webkit-box-shadow: 5px 0px 5px 0px rgba(204,204,204,0.75);
+	-moz-box-shadow: 5px 0px 5px 0px rgba(204,204,204,0.75);
+	box-shadow: 5px 0px 5px 0px rgba(204,204,204,0.75);
 	position:fixed;
 	z-index: 1;
 	top: 3em;
