adjust position of chevron in mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ li > .fa-chevron-down {
 	color: #4d4d4d;
 	border-radius: 15px;
 	padding: .7em;
-	margin: 1em .5em 0 0;
+	margin: 1em 1.5em 0 0;
 	font-size: .7em;
 	float: right;
 }
