--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,7 @@ li > .fa-chevron-down {
 @media screen and (min-width: 768px) {
 	header {
 		background-color: #000;
+		width: 100%;
 		color: #fff;
 		height: 7.2em;
 		border-bottom: .4em solid goldenrod;
@@ -154,12 +155,18 @@ li > .fa-chevron-down {
 
 	#menu > ul {
 		outline: 1px solid red;
+		position: absolute;
 		right: 0;
+		top: 0;
 		overflow: hidden;
 		text-align: right;
-		height: auto;
+		height: 7em;
 		background-color: initial;
 		box-shadow: initial;
+	}
+
+	body > div img {
+		width: 100%;
 	}
 
 	/*
