add hover state for selected tab on desktop

--- a/css/main.css
+++ b/css/main.css
@@ -192,11 +192,11 @@ li > .fa-chevron-down {
 		color: #000;
 	}
 
-	#menu li:hover {
+	#menu li:hover:not(.selected) {
 		background-color: initial;
 	}
 
-	#menu li:hover a {
+	#menu li:hover:not(.selected) a {
 		color: goldenrod;
 	}
 
