--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,8 @@ li > .fa-chevron-down {
 }
 
 /* hide trips submenu by default */
-#menu ul.trip-menu {
+#menu ul.trip-menu,
+#menu ul.trip-menu ul {
 	display: none;
 }
 
@@ -129,7 +130,9 @@ li > .fa-chevron-down {
 
 
 
-/* desktop */
+/***** 
+tablet 
+*****/
 
 @media screen and (min-width: 768px) {
 	
@@ -169,11 +172,12 @@ li > .fa-chevron-down {
 	}
 
 	#menu > ul {
+		outline: 3px solid green;
 		position: absolute;
 		right: 0;
 		top: 0;
 		width: 65%;
-		overflow: hidden;
+		overflow: visible;
 		height: 7.3em;
 		background-color: initial;
 		box-shadow: initial;
@@ -210,12 +214,31 @@ li > .fa-chevron-down {
 		position: relative;
 	}
 
-	#menu li.trip-list-item:hover ul.trip-menu {
-		outline: 1px solid red;
+	#menu li.trip-list-item ul.trip-menu {
+		outline: 3px solid red;
+		padding: 0;
+		text-align: center;
+		/*position: absolute;*/
 		display: block;
-		z-index: 999;
+		/*z-index: 999;*/
 		background-color: #fff;
+		width: 20%;
 	}
+
+	#menu ul.trip-menu > li {
+		display: block;
+		line-height: .5em;
+		padding: 1em;
+		font-size: .8em;
+		outline: 3px solid blue;
+	}
+
+	#menu ul.trip-menu li a {
+		color: #000;
+		font-size: 1em;
+	}
+
+
 
 	#menu i.fa-caret-down {
 		position: absolute;
@@ -232,6 +255,12 @@ li > .fa-chevron-down {
 }
 
 
+/***** 
+desktop 
+*****/
 
+@media screen and (min-width: 1025px)  {
+
+}
 
 
