--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,6 @@ tablet
 	}
 
 	#menu > ul {
-		outline: 3px solid green;
 		position: absolute;
 		right: 0;
 		top: 0;
@@ -215,14 +214,13 @@ tablet
 	}
 
 	#menu li.trip-list-item ul.trip-menu {
-		outline: 3px solid red;
-		padding: 0;
+		padding: 0 .5em;
 		text-align: center;
-		/*position: absolute;*/
+		position: absolute;
 		display: block;
-		/*z-index: 999;*/
 		background-color: #fff;
-		width: 20%;
+		left: 0%;
+		top:6.3em;
 	}
 
 	#menu ul.trip-menu > li {
@@ -230,7 +228,6 @@ tablet
 		line-height: .5em;
 		padding: 1em;
 		font-size: .8em;
-		outline: 3px solid blue;
 	}
 
 	#menu ul.trip-menu li a {
