--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ tablet
 	}
 
 	#menu li.trip-list-item ul.trip-menu {
-		padding: 0 .5em;
+		padding: .5em;
 		text-align: center;
 		position: absolute;
 		display: block;
