--- a/css/main.css
+++ b/css/main.css
@@ -222,26 +222,36 @@ tablet
 		position: relative;
 	}
 
-	#menu li.trip-list-item ul.trip-menu {
+	#menu li.trip-list-item ul.trip-menu,
+	#menu ul.trip-menu ul {
 		padding: .5em;
 		text-align: center;
 		position: absolute;
 		display: block;
 		background-color: #fff;
+	}
+
+	#menu li.trip-list-item ul.trip-menu {
 		left: 0%;
 		top: 5.7em;
 	}
 
-	#menu ul.trip-menu > li {
+	#menu ul.trip-menu > li,
+	#menu ul.trip-menu ul > li {
 		display: block;
 		line-height: .5em;
 		padding: 1em;
-		font-size: .8em;
+		font-size: 1rem;
 	}
 
 	#menu ul.trip-menu li a {
 		color: #000;
-		font-size: 1em;
+	}
+
+	#menu ul.trip-menu ul {
+		top: 5em;
+		left: 100%;
+		width: 12em;
 	}
 
 	.fa-angle-right {
@@ -249,6 +259,7 @@ tablet
 		padding-left: .3em;
 	}
 
+	
 
 	#menu i.fa-caret-down {
 		position: absolute;
