--- a/css/main.css
+++ b/css/main.css
@@ -175,14 +175,11 @@ tablet
 		background-color: initial;
 		box-shadow: initial;
 		top: 5em;
-		/*padding-top: 1em;*/
-		outline: 1px solid white;
 	}
 
 	#menu li {
 		display: inline;
 		line-height: 0;
-		outline: 1px solid red;
 		padding: .8em 1em;
 		font-size: 1.3em;
 	}
@@ -266,10 +263,8 @@ tablet
 
 	#menu i.fa-caret-down {
 		position: absolute;
-		bottom: .5em;
 		left: 45%;
 		display: block;
-		font-size: 1.5em;
 	}
 
 	body > div img {
@@ -307,6 +302,12 @@ desktop
 	#menu li {
 		padding: 2.2em 1.25em;
 	}
+
+	#menu i.fa-caret-down { 
+		font-size: 1.5em;
+		bottom: .5em;
+	}
+
 }
 
 
