--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,7 @@ tablet
 	#menu li.trip-list-item ul.trip-menu {
 		left: 0%;
 		top: 3.2em;
+		box-shadow: 5px 0px 5px 0px rgba(144,144,144,0.75);
 	}
 
 	#menu ul.trip-menu > li,
