--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ tablet
 
 @media screen and (min-width: 768px) {
 
-	header div.lg-container > div {
+	header div.lg-container > div:first-child {
 		padding-top: .5em;
 	}
 
@@ -181,6 +181,7 @@ tablet
 		box-shadow: initial;
 		top: 5em;
 		display: inherit;
+		text-align: center;
 	}
 
 
