--- a/css/main.css
+++ b/css/main.css
@@ -151,18 +151,25 @@ header div.lg-container > div h1 {
 		width: 100%;
 		text-align: center;
 		overflow: hidden;
-
 		height: 50vh;
 	}
 
 	div.banner > img {
 		outline: 2px solid red;
-		position: relative;
 		left: 100%;
-		margin-left: -290%;
+		margin-left: -152%;
 		top: 100%;
-		margin-top: -50%;
+		margin-top: -23%;
+		zoom:73%;
+	}
 
+	div.banner > h1 {
+		position: absolute;
+		top: 17vh;
+		font-size: 2.5em;
+		width: 83%;
+		margin: 0.2em .5em;
+		line-height: 1.2em;
 	}
 
 
