--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,8 @@ h1 {
 
 #menu h1 {
 	display: inline-block;
-	font-size: 1.5em;
+	font-size: 1.05em;
+	letter-spacing: .07em;
 	padding: .45em;
 	margin: 0;
 }
