--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,6 @@ tablet
 		text-align: center;
 	}
 
-
 	#menu li {
 		display: inline;
 		line-height: 0;
@@ -311,6 +310,14 @@ tablet
 /* tablet banner */
 	body > div.banner {
 		width: 100%;
+		height: 65vh;
+	}
+
+	div.banner > img {
+		zoom: 70%;
+		margin-left: -44%;
+		margin-top: 0;
+
 	}
 
 }
