--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ desktop
 /* desktop header and nav presentation */
 	.lg-container {
 		width: 85%;
-		margin: 0 auto;
+		margin: 0 1.5em;
 	}
 
 	header {
@@ -340,13 +340,13 @@ desktop
 	}
 
 	header div.lg-container > div {
-		width: 20%;
+		width: 23%;
 	}
 
 	#menu > ul {
 		right: 0;
 		top: 1.5em;
-		width: 65%;
+		width: auto;
 	}
 
 	#menu li {
@@ -360,6 +360,15 @@ desktop
 
 	#menu li.trip-list-item ul.trip-menu {
 		top: 5.9em;
+	}
+
+	body > div.banner {
+		height: 68vh;
+	}
+
+	div.banner > img {
+		zoom: 73%;
+		margin-left: -20%;
 	}
 
 }
