--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ tablet
 
 	div.banner > img {
 		zoom: 70%;
-		margin-left: -44%;
+		margin-left: -46%;
 		margin-top: 0;
 	}
 
@@ -340,6 +340,10 @@ tablet
 		top: 27vh;
 		font-size: 3.5em;
 		width: auto;
+	}
+
+	.banner-button {
+		top: 50vh;
 	}
 
 }
