--- a/css/main.css
+++ b/css/main.css
@@ -332,18 +332,19 @@ tablet
 
 	div.banner > img {
 		zoom: 70%;
-		margin-left: -46%;
+		margin-left: -44.5%;
 		margin-top: 0;
 	}
 
 	div.banner > h1 {
-		top: 27vh;
-		font-size: 3.5em;
+		top: 25vh;
+		font-size: 3.7em;
 		width: auto;
+		margin: 0.2em .5em;
 	}
 
 	.banner-button {
-		top: 50vh;
+		top: 49vh;
 	}
 
 }
@@ -400,6 +401,10 @@ desktop
 	div.banner > h1 {
 		width: 100%;
 		margin: auto;
+	}
+
+	.banner-button {
+		top: 38vh;
 	}
 
 }
