--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@ tablet
 		position: absolute;
 		display: block;
 		background-color: #fff;
-			-webkit-box-shadow: 5px 0px 5px 0px rgba(144,144,144,0.75);
+		-webkit-box-shadow: 5px 0px 5px 0px rgba(144,144,144,0.75);
 		-moz-box-shadow: 5px 0px 5px 0px rgba(144,144,144,0.75);
 		box-shadow: 5px 0px 5px 0px rgba(144,144,144,0.75);
 	}
@@ -301,7 +301,6 @@ tablet
 	#menu li.trip-list-item ul.trip-menu {
 		left: 0%;
 		top: 3.2em;
-	
 	}
 
 	#menu ul.trip-menu > li,
@@ -416,6 +415,10 @@ desktop
 
 	.banner-button {
 		top: 38vh;
+	}
+
+	.button:hover {
+		background-color: #29a329;
 	}
 
 }
