--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ h1 {
 	height: 3.3em;
 	color: #000;
 	text-align: left;
+	padding-top: .7em;
 }
 
 #menu i.fa-times, #menu i.fa-bars {
@@ -138,8 +139,12 @@ li > .fa-chevron-down {
 	color: #4d4d4d;
 }
 
-#menu i.fa-bars {
+#menu i.fa-times {
 	display: none;
+}
+
+#menu i.fa-bars {
+	display: initial;
 }
 
 #menu i.fa-caret-down {
@@ -210,7 +215,7 @@ header div.lg-container > div h1 {
 
 	.join-club p {
 		font-weight: 800;
-		font-size: 1.05em;
+		font-size: 1.05em	;
 	}
 
 	#googleMap {
