--- a/css/main.css
+++ b/css/main.css
@@ -498,6 +498,20 @@ desktop
 		width:33%;
 	}
 
+	div.adventure-grp {
+		display:block;
+		width: 25%;
+	}
+
+	.adventures {
+		height: 36em;
+	}
+
+	.adventures img,
+	.adventures a {
+		width: 87%;
+	}
+
+
+
 }
-
-
