--- a/css/main.css
+++ b/css/main.css
@@ -262,12 +262,13 @@ header div.lg-container > div h1 {
 	.news-container > div {
 		position:absolute;
 		width:100%;
-		top:1em;
+		top:0.1em;
 	}
 
 	.news-container > div, .news-container > span {
 		outline:1px solid red;
-		
+		background: rgba(65, 65, 65, 0.9);
+		color: #fff;
 	} 
 
 
