--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,16 @@ header div.lg-container > div h1 {
 		outline: 1px solid blue;
 	}
 
+	.news-container div > h2:first-child {
+		outline: 1px solid red;
+		font-family: sans-serif;
+		font-size: 2.2em;
+		font-weight: 100;
+		color: #f9b324;
+	}
+
+
+
 
 
 	
