--- a/css/main.css
+++ b/css/main.css
@@ -259,7 +259,7 @@ header div.lg-container > div h1 {
 	}
 
 	.news-container > div, .news-container > img {
-		height: 165vh;
+		height: 255vh;
 	}
 
 	.news-container > div {
@@ -273,14 +273,17 @@ header div.lg-container > div h1 {
 
 	.news-container > div div {
 		outline: 1px solid blue;
+		padding-top: 1em;
+		padding-bottom: 1em;
+
 	}
 
 	.news-container div > h2:first-child {
-		outline: 1px solid red;
 		font-family: sans-serif;
 		font-size: 2.2em;
 		font-weight: 100;
 		color: #f9b324;
+		margin-bottom: 0;
 	}
 
 
