--- a/css/main.css
+++ b/css/main.css
@@ -265,14 +265,13 @@ header div.lg-container > div h1 {
 	.news-container > div {
 		position: absolute;
 		top:0;
-		background: rgba(65, 65, 65, 0.9);
+		background: rgba(72, 78, 85, 0.9);
 		color: #fff;
 		padding-right: 1em;
 		padding-left: 1em;
 	} 
 
 	.news-container > div div {
-		outline: 1px solid blue;
 		padding-top: 1em;
 		padding-bottom: 1em;
 
@@ -284,6 +283,10 @@ header div.lg-container > div h1 {
 		font-weight: 100;
 		color: #f9b324;
 		margin-bottom: 0;
+	}
+
+	.news-container p {
+		color: rgba(181,196,213,0.9);
 	}
 
 
