--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header {
 }
 
 h1 {
-	font-family: 'Roboto Slab', sans-serif;
+	font-family: 'Roboto Slab', sans-sxserif;
 	font-size: 2.6em;
 	margin: 0.2em .7em;
 	line-height: 1.2em;
@@ -287,6 +287,7 @@ header div.lg-container > div h1 {
 
 	.news-container p {
 		color: rgba(181,196,213,0.9);
+		margin-bottom: 2em;
 	}
 
 
